
ChangeLog
 [ + added, - removed, * changed ]
 * 27Mar2015 Changed memory allocation for the InputTraces and FileSet structures in the merger: instead of allocating space for MAX_FILES, we allocate only for the maximum of mpits. MAX_FILES constant has been removed.
 * 16Mar2015 Support up to 512 params in Intel KMP OpenMP runtime
 * 13Mar2015 Support to compile Extrae outside its src directory
             (thanks to Jorge Bellon)
             Fixed some Extrae tests
 * 10Mar2015 Improved/fixed support for task constructs in libgomp
             (thanks to Eduard Ayguade)
 * 05Mar2015 Fixed pthread support (missing pthread_id for master pthred)
             Use multiarch triplet where available
             (thanks to JM Perez)
 * 03Mar2015 Revamped papi_best_set
 * 26Feb2015 Completed MPI_Intercomm_create support (serial & parallel mergers)
 + 23Feb2015 Instrumentation of MPI_intercomm_[create|merge]
 + 13Feb2015 Extend malloc-related instrumentation 
 * 28Jan2015 Fixed bug in calltrace.c that made wrong caller levels to be traced
 when using backtrace instead of libunwind.
 * 26Jan2015 Fixed bug in calltrace.h that made that the label of the caller
 events when is a single level of the stack requested to be always 70000000,
 despite the level requested.
 * 23Jan2015 Changed primary lib_LTLIBRARIES to noinst_LTLIBRARIES at
 src/tracer/stats/Makefile.am to fix a bug in K computer.
 * 19Dec2014 Improve Java examples for Darwin & Linux
             Improve support for Darwin
 * 18Dec2014 Fix installation script (substitute) to work on AIX & Darwin
 * 15Dec2014 Fix CUDA+MPI+OpenMP instrumentation library
             Improve location for libbfd & libiberty from the binutils package
             Capture callstack at dynamic memory instrumentation points
             Improve support for AARCH64 architectures
 * 12Dec2014 Upgraded DLB support
 * 04Dec2014 Fixed PCF labels regarding OpenSHMEM, they don't appear now if
             there's no SHMEM events in the trace