@@ -17,11 +17,8 @@
         <sampling enabled="no" period="1000000000">PAPI_TOT_CYC</sampling>
       </set>
     </cpu>
-
     <network enabled="no" />
-
     <resource-usage enabled="no" />
-
     <memory-usage enabled="no" />
   </counters>
 
@@ -54,7 +51,10 @@
 
   <cuda enabled="yes" />
 
-  <dynamic-memory enabled="no" />
+  <dynamic-memory enabled="no">
+    <alloc enabled="yes" threshold="32768" />
+    <free  enabled="yes" />
+  </dynamic-memory>
 
   <input-output enabled="no" />
 
