@@ -21,11 +21,8 @@
         <sampling enabled="no" period="1000000000">PAPI_TOT_CYC</sampling>
       </set>
     </cpu>
-
     <network enabled="no" />
-
     <resource-usage enabled="no" />
-
     <memory-usage enabled="no" />
   </counters>
 
@@ -56,7 +53,10 @@
 
   <sampling enabled="no" type="default" period="50m" variability="10m" />
 
-  <dynamic-memory enabled="no" />
+  <dynamic-memory enabled="no">
+    <alloc enabled="yes" threshold="32768" />
+    <free  enabled="yes" />
+  </dynamic-memory>
 
   <input-output enabled="no" />
 
